--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ h4 {
     color: var(--text-color-light);
 }
 
-h5 {
+h5,
+button {
     font-size: 1.25rem;
     font-family: var(--font-header);
     font-weight: var(--font-header-weight);
@@ -108,8 +109,8 @@ header {
 }
 
 /* Making the dividing line between the header and main */
-/* this is annoying, could do this in typescript in 5 minutes */
-/* but had to fight ChatGPT for an adequat answer */
+/* this is annoying, I could do this in typescript in 5 minutes */
+/* but had to fight ChatGPT (and myself) for an adequat answer */
 header::after {
     z-index: 0;
     content: "";
@@ -134,12 +135,12 @@ header::after {
 }
 
 .logo-wrapper>img {
-    height: 100%;
+    height: 90%;
 }
 
 
 .nav-wrapper {
-    padding: 10px;
+    padding: 1rem;
     z-index: 2;
     height: 100%;
     display: flex;
@@ -169,7 +170,47 @@ main {
     background-position: top center;
 }
 
+main>article {
+    margin: 5rem 20rem;
+    padding: 7rem;
+    background: color-mix(in srgb, var(--background-color-light), transparent 50%);
+}
+
+main>article>p {
+    margin: 2rem 0;
+}
+
+.button-wrapper-right {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.button-wrapper-right>button {
+    background: var(--main-cta);
+    padding: 1rem;
+    color: var(--background-color-light);
+    border-radius: 15px;
+    border: none;
+}
+
 footer {
     width: 100%;
     background: var(--footer-bg-light);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+footer>article {
+    height: 100%;
+    text-align: center;
+    align-content: center;
+    width: 70%;
+}
+
+.logo-footer {
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-content: center;
 }
