Color and header cleanup
Deleted all the unused header-definitons and made the color-themes compliant with the design

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,6 @@
 footer {
     width: 100vw;
-    background: var(--footer-bg-light);
+    background: var(--footer-bg);
     display: flex;
     justify-content: space-between;
 }
