--- a/styles/base.css
+++ b/styles/base.css
@@ -18,7 +18,7 @@ body {
     height: 100dvh;
     display: grid;
     grid-template-rows: auto 1fr auto;
-    background-color: var(--background-color-light);
+    background-color: var(--background-color);
 }
 
 
