--- a/styles/header.css
+++ b/styles/header.css
@@ -4,7 +4,7 @@ header {
     justify-content: space-between;
     align-items: center;
     position: relative;
-    background: var(--background-color-light);
+    background: var(--background-color);
 }
 
 .logo-wrapper {
@@ -45,15 +45,10 @@ li>a {
     align-items: center;
     gap: 0.5em;
     padding: .75em 1.5em;
-    font-size: 1.25rem;
-    font-family: var(--font-header);
-    font-weight: var(--font-header-weight);
-    font-style: var(--font-header-style);
-    color: var(--text-color);
     text-decoration: none;
 }
 
-li>a img {
+li>a svg {
     display: block;
     height: 1.2em;
 }
@@ -101,7 +96,7 @@ li>a img {
     width: 1.6em;
     left: 0.2em;
     bottom: 0.2em;
-    background-color: var(--bg-tint-color-light);
+    background-color: var(--bg-tint-color);
     border-radius: .4em;
     -webkit-transition: .4s;
     transition: .4s;
