Made first-version of the hamburger dropdown
Using the dark-light toggle as inspiration. Will have to find out how to controll behaviour of this now.

--- a/styles/base.css
+++ b/styles/base.css
@@ -53,7 +53,7 @@ body {
 
     /* Removing the dark-light switch for smaller screen-sizes 
        and moving the nav to a hamburger menu  */
-    .nav-wrapper {
+    .nav-wrapper>ul {
         display: none
     }
 
@@ -62,7 +62,8 @@ body {
     }
 
     #hamburger-menu {
-        display: inline;
+        display: block;
+        margin-left: auto;
     }
 
 }
