--- a/styles/header.css
+++ b/styles/header.css
@@ -6,7 +6,6 @@ header {
     align-items: center;
     background: var(--background-color);
     padding: 1em 1.5em;
-    z-index: 10;
 }
 
 .logo-wrapper {
@@ -122,9 +121,12 @@ input:checked+.slider:before {
 #hamburger-menu>input {
     position: absolute;
     inset: 0;
-    opacity: 0;
-    cursor: pointer;
+    width: 100%;
+    height: 100%;
     appearance: none;
+    -webkit-appearance: none;
+    cursor: pointer;
+
 }
 
 :root:has(#navigation-menu-wrapper:checked) {
@@ -135,10 +137,13 @@ input:checked+.slider:before {
         top: 100%;
         right: -3em;
         bottom: 0;
-        background: red;
         display: flex;
         flex-direction: column;
-        /*z-index: 3*/
+    }
+
+    .nav-wrapper>ul>li {
+        background: var(--background-color);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, .25);
     }
 }
 
