--- a/styles/header.css
+++ b/styles/header.css
@@ -142,6 +142,7 @@ input:checked+.slider:before {
     }
 
     .nav-wrapper>ul>li {
+        z-index: 1;
         background: var(--background-color);
         box-shadow: 0 8px 16px rgba(0, 0, 0, .25);
     }
