--- a/styles/product-main.css
+++ b/styles/product-main.css
@@ -1,3 +1,11 @@
+footer {
+    grid-area: footer;
+}
+
+header {
+    grid-area: header;
+}
+
 body {
     grid-template-areas:
         "header header"
@@ -6,9 +14,6 @@ body {
     grid-template-columns: calc(300px + 2em) 1fr;
 }
 
-header {
-    grid-area: header;
-}
 
 aside {
     grid-area: aside;
@@ -30,10 +35,41 @@ aside>h1 {
 
 main {
     grid-area: main;
-    width: auto;
+    width: 100%;
     padding: 2em;
+    display: grid;
+    grid-template-areas:
+        "img-wrapper product-summary"
+        "button-wrapper button-wrapper";
+    grid-template-rows: 1fr auto;
+    grid-template-columns: auto auto;
 }
 
-footer {
-    grid-area: footer;
+
+.img-wrapper {
+    position: relative;
+    grid-area: img-wrapper;
+}
+
+.product-summary {
+    grid-area: product-summary;
+    background: blue;
+}
+
+.button-wrapper-right {
+    grid-area: button-wrapper;
+
+}
+
+@media screen and (width <=1280px) {
+    body {
+        grid-template-areas:
+            "header"
+            "main"
+            "aside"
+            "footer";
+        grid-template-rows: auto 1fr calc(350px + 2em) auto;
+        grid-template-columns: 1fr;
+        overflow: hidden;
+    }
 }
