--- a/styles/pay-main.css
+++ b/styles/pay-main.css
@@ -5,7 +5,7 @@ main {
         "contact-info to-payment";
     grid-template-rows: 1fr 1fr;
     grid-template-columns: auto 300px;
-    padding: 2em clamp(0.2em, 10vw, 7em);
+    padding: 2em clamp(0.2em, 22vw, 13em);
     gap: 1em;
 }
 
@@ -25,7 +25,6 @@ main {
     display: inline-block;
     margin: 0 1em 0 0;
 }
-
 
 .payment-contact-info p {
     padding-bottom: 0;
@@ -47,10 +46,73 @@ main {
     background: var(--background-color);
     display: flex;
     flex-direction: column;
-    padding: 2em;
-    line-height: 0;
+    padding: 1em;
+    line-height: 1.2;
     border-radius: .5em;
     border: 1px solid var(--text-color);
     box-shadow: 2px 3px 8px color-mix(in srgb, var(--text-color), transparent 50%);
+}
 
+.order-item {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    border-bottom: 1px solid var(--text-color);
+    margin-bottom: .5em;
+}
+
+.order-item p {
+    padding: 0;
+    margin: .5em .5em .5em 0;
+}
+
+.order-item img {
+    height: 3em;
+    padding: 0 1em 0 0;
+}
+
+.order-summary>h2 {
+    display: flex;
+    justify-content: right;
+}
+
+.to-payment-info {
+    grid-area: to-payment;
+    display: flex;
+    flex-direction: column;
+    padding: 0 1em;
+    line-height: 1.2;
+}
+
+.progress-bar svg {
+    width: 100%;
+}
+
+.billing-button-wrapper {
+    position: relative;
+    width: 100%;
+    height: 3em;
+    background: var(--secondary-cta);
+    border-radius: 0.5em;
+}
+
+.billing-button-wrapper h2 {
+    background: var(--secondary-cta);
+    border-radius: 0.5em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#to-billing-button {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    appearance: none;
+    -webkit-appearance: none;
+    cursor: pointer;
 }
