--- a/styles/content-short.css
+++ b/styles/content-short.css
@@ -29,19 +29,8 @@
     border-radius: 5em;
 }
 
-.content-short>button {
-    cursor: pointer;
-    color: var(--text-color);
+.content-short>div{
     position: absolute;
     bottom: 5%;
     right: 10%;
-    background: var(--main-cta);
-    padding: .25em 2em;
-    border-radius: .5em;
-    border: none;
-}
-
-.content-short>button:hover {
-    background: var(--secondary-cta);
-    color: var(--background-color);
 }
