--- a/styles/main.css
+++ b/styles/main.css
@@ -18,10 +18,18 @@ main>article {
     flex-direction: row-reverse;
 }
 
-.button-wrapper-right>a {
+
+/* Designing the visuals of buttons */
+/* (Not included the nav elements or light/dark) */
+.button-style-main {
     background: var(--main-cta);
-    padding: 1em;
+    padding: .75em 1em;
     color: var(--text-color);
-    border-radius: 1em;
+    border-radius: .5em;
     border: none;
+}
+
+.button-style-main:hover {
+    background: var(--secondary-cta);
+    color: var(--background-color);
 }
