--- a/styles/typography-and-color.css
+++ b/styles/typography-and-color.css
@@ -1,25 +1,39 @@
 :root {
     font-size: clamp(0.8em, 5vw, 1.2em);
-    --text-color-light: #0a3641;
-    --background-color-light: #fffded;
-    --main-cta: #f72c25;
-    --secondary-cta: #ffb17a;
-    --footer-bg-light: #fce762;
-    --button-padding: 10px 20px;
+
+    /* Fonts */
     --font-header: "Barlow Condensed", sans-serif;
     --font-header-weight: 600;
     --font-header-style: normal;
+
     --font-paragraph: "Source Sans 3", sans-serif;
     --font-paragraph-weight: 400;
     --font-paragraph-style: normal;
-    --bg-tint-color-light: #fffdeda7;
 
+    /* Spacing */
+    --button-padding: 10px 20px;
+    --border-radius: 8px;
+
+    /*--------------------------------------------------*/
+    /* Colors */
     color-scheme: light dark;
+
+    /* Light theme colors*/
+    --bg-tint-color-light: #fffdeda7;
+    --text-color-light: #0a3641;
+    --background-color-light: #fffded;
+    --footer-bg-light: #fce762;
+
+    /* Dark */
     --text-color-dark: #e8fdff;
     --background-color-dark: #0a1d24;
     --footer-bg-dark: #0a1d24;
     --bg-tint-color-dark: #0b141680;
 
+    --main-cta: #f72c25;
+    --secondary-cta: #ffb17a;
+
+    /* Theme variables (those used in CSS styles) */
     --text-color: var(--text-color-light);
     --background-color: var(--background-color-light);
     --footer-bg: var(--footer-bg-light);
@@ -33,46 +47,46 @@
     --bg-tint-color: var(--bg-tint-color-dark);
 }
 
-h1 {
-    font-size: 1.56rem;
+h1,
+h2,
+h3,
+button,
+a {
     font-family: var(--font-header);
     font-weight: var(--font-header-weight);
     font-style: var(--font-header-style);
     color: var(--text-color);
 }
 
-h2,
-button,
+h1 {
+    font-size: 1.56rem;
+}
+
+h2 {
+    font-size: 1.25rem;
+}
+
+h3 {
+    font-size: 0.8rem;
+}
+
 a {
     font-size: 1.25rem;
-    font-family: var(--font-header);
-    font-weight: var(--font-header-weight);
-    font-style: var(--font-header-style);
-    color: var(--text-color);
     text-decoration: none;
 }
 
-h6 {
-    font-size: 0.8rem;
-    font-family: var(--font-header);
-    font-weight: var(--font-header-weight);
-    font-style: var(--font-header-style);
-    color: var(--text-color);
-}
-
-p, th, td {
+p,
+th,
+td,
+input {
     font-size: 1rem;
+    color: var(--text-color);
     font-family: var(--font-paragraph);
     font-weight: var(--font-paragraph-weight);
     font-style: var(--font-paragraph-style);
-    color: var(--text-color);
+}
+
+p {
     margin: 2em 0;
     line-height: 1.5;
-}
-
-input {
-    color: var(--text-color);
-    font-family: var(--font-paragraph);
-    font-weight: var(--font-paragraph-weight);
-    font-style: var(--font-paragraph-style);
 }
