--- a/styles/content-short.css
+++ b/styles/content-short.css
@@ -6,7 +6,7 @@
     flex-basis: 300px;
     height: 350px;
     background: color-mix(in srgb, var(--background-color), transparent 50%);
-    border-radius: .75em;
+    border-radius: var(-border-radius);
     padding: 1em;
     box-shadow: 1px 2px 4px color-mix(in srgb, var(--background-color), transparent 50%);
     cursor: pointer;
