--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,7 @@ main>article {
     background: var(--main-cta);
     padding: .75em 1em;
     color: var(--text-color);
-    border-radius: .5em;
+    border-radius: var(--border-radius);
     border: none;
 }
 
