--- a/styles/header.css
+++ b/styles/header.css
@@ -91,7 +91,7 @@ li>a svg {
     right: 0;
     bottom: 0;
     background-color: var(--text-color);
-    border-radius: .5em;
+    border-radius: var(--border-radius);
     -webkit-transition: .4s;
     transition: .4s;
 }
@@ -104,7 +104,7 @@ li>a svg {
     left: 0.2em;
     bottom: 0.2em;
     background-color: var(--bg-tint-color);
-    border-radius: .4em;
+    border-radius: var(--border-radius);
     -webkit-transition: .4s;
     transition: .4s;
 }
