--- a/styles/product-main.css
+++ b/styles/product-main.css
@@ -66,7 +66,7 @@ main {
     flex-shrink: 0;
     flex-basis: 300px;
     height: 350px;
-    border-radius: var(-border-radius);
+    border-radius: var(--border-radius);
     padding: 1em;
 }
 
