--- a/styles/base.css
+++ b/styles/base.css
@@ -15,7 +15,9 @@ body {
 }
 
 /* Designing the visuals of buttons */
-/* (Not included the nav elements or light/dark) */
+/* (Not included the nav elements or light/dark or hamburger) */
+/* Also: all buttons are checkboxes or a or h2 or a combination of these */
+/* I hate this (↑) hack, please let me use TypeScript or even JavaScript */
 .button-style-main {
     background: var(--main-cta);
     padding: .75em 1em;
@@ -27,4 +29,16 @@ body {
 .button-style-main:hover {
     background: var(--secondary-cta);
     color: var(--background-color);
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
 }
