--- a/styles/header.css
+++ b/styles/header.css
@@ -43,15 +43,13 @@ li>a {
     text-decoration: none;
 }
 
-li > a:hover {
-     background-image: radial-gradient(
-        ellipse at center,
-        color-mix(in srgb, var(--text-color), transparent 70%) 0%,
-        transparent 80%
-    );
+li>a:hover {
+    background-image: radial-gradient(ellipse at center,
+            color-mix(in srgb, var(--text-color), transparent 70%) 0%,
+            transparent 80%);
     background-repeat: no-repeat;
     background-size: 80% 0.25em;
-    background-position: 50% 90%;     
+    background-position: 50% 90%;
 }
 
 li>a svg {
@@ -128,17 +126,6 @@ input:checked+.slider:before {
 #hamburger-menu>svg {
     display: block;
     height: 3em;
-}
-
-#hamburger-menu>input {
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    appearance: none;
-    -webkit-appearance: none;
-    cursor: pointer;
-
 }
 
 :root:has(#navigation-menu-wrapper:checked) {
