--- a/styles/product-main.css
+++ b/styles/product-main.css
@@ -49,6 +49,10 @@ main {
     padding: 0 3em;
 }
 
+aside h2{
+    color: var(--background-color);
+}
+
 .button-wrapper-right {
     grid-area: button-wrapper;
     display: flex;
