--- a/styles/typography-and-color.css
+++ b/styles/typography-and-color.css
@@ -78,7 +78,8 @@ a {
 p,
 th,
 td,
-input {
+input,
+label {
     font-size: 1rem;
     color: var(--text-color);
     font-family: var(--font-paragraph);
@@ -86,7 +87,13 @@ input {
     font-style: var(--font-paragraph-style);
 }
 
-p {
+p,
+label {
     margin: 2em 0;
     line-height: 1.5;
+}
+
+form input {
+    display: block;
+    margin-bottom: 1em;
 }
