Removed the inline svg of the logo
Decided that the svg-idea was stupid when I finally checed the page with https://validator.w3.org and got a hundred svg-warnings and reading actuall html-feedback was difficult.

--- a/styles/typography-and-color.css
+++ b/styles/typography-and-color.css
@@ -41,10 +41,18 @@
 }
 
 :root:has(#theme-toggle:checked) {
+    .light-theme {
+        display: none;
+    }
     --text-color: var(--text-color-dark);
     --background-color: var(--background-color-dark);
     --footer-bg: var(--footer-bg-dark);
     --bg-tint-color: var(--bg-tint-color-dark);
+}
+:root:has(#theme-toggle:not(:checked)) {
+    .dark-theme {
+        display: none;
+    }
 }
 
 h1,
