--- a/styles/product-main.css
+++ b/styles/product-main.css
@@ -40,7 +40,7 @@ main {
     grid-template-areas:
         "img-wrapper product-summary"
         "button-wrapper button-wrapper";
-    grid-template-rows: auto auto;
+    grid-template-rows: auto 3.5em;
     grid-template-columns: 300px auto;
 }
 
