--- a/styles/pay-main.css
+++ b/styles/pay-main.css
@@ -27,7 +27,7 @@ main {
     display: none;
 }
 
-form{
+form {
     margin: 2em 0;
 }
 
@@ -102,7 +102,11 @@ form input {
 .progress-bar img {
     width: 100%;
 }
-.progress-bar{
+
+.progress-bar {
+    width: 100%;
+    display: flex;
+    justify-content: center;
     padding: 1em 0;
 }
 
@@ -164,5 +168,22 @@ form input {
 
     .summary-hidden {
         display: inline;
+    }
+}
+
+@media screen and (width <=1280px) {
+    main {
+        grid-template-areas:
+            "contact-info"
+            "to-payment"
+            "summary";
+        grid-template-rows: auto auto auto;
+        grid-template-columns: auto;
+        padding: 2em 1em;
+        gap: 1em;
+    }
+
+    .progress-bar img {
+        width: 50%;
     }
 }
