--- a/styles/product-main.css
+++ b/styles/product-main.css
@@ -24,7 +24,7 @@ aside {
     gap: 3em;
     flex-wrap: wrap;
     overflow: auto;
-    background: var(--text-color);
+    background: color-mix(in srgb, var(--text-color), transparent 50%);
     scrollbar-width: none;
 }
 
@@ -34,29 +34,29 @@ aside>h1 {
 
 main {
     grid-area: main;
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
+    height: 100%;
     padding: 2em;
-    display: grid;
-    grid-template-areas:
-        "img-wrapper product-summary"
-        "button-wrapper button-wrapper";
-    grid-template-rows: auto 3.5em;
-    grid-template-columns: 300px auto;
+    justify-content: center;
 }
 
 .product-summary {
     grid-area: product-summary;
     padding: 0 3em;
+    max-width: 500px;
 }
 
-aside h2{
-    color: var(--background-color);
+aside h2 {
+    color: var(--text-color);
 }
 
 .button-wrapper-right {
     grid-area: button-wrapper;
     display: flex;
     text-align: center;
+    padding: 0 2em;
 }
 
 .button-wrapper-right>a {
@@ -64,7 +64,8 @@ aside h2{
 }
 
 .jacket-wrapper {
-    grid-area: img-wrapper;
+    grid-area: jacket-wrapper;
+    background: color-mix(in srgb, var(--background-color), transparent 50%);
     position: relative;
     flex-grow: 0;
     flex-shrink: 0;
@@ -91,7 +92,7 @@ aside h2{
     border-radius: 5em;
 }
 
-@media screen and (width <=1280px) {
+@media screen and (width <=1100px) {
     body {
         grid-template-areas:
             "header"
@@ -102,12 +103,20 @@ aside h2{
     }
 
     main {
-        grid-template-areas:
-            "img-wrapper "
-            "product-summary"
-            "button-wrapper";
-        grid-template-rows: auto auto auto;
-        grid-template-columns: auto;
-        padding: 0.5em;
+        grid-area: main;
+        display: flex;
+        flex-grow: 1;
+        width: 100%;
+        height: 100%;
+        padding: 1em;
+    }
+
+    aside {
+        display: none;
+    }
+
+    .jacket-wrapper {
+        width: 300px;
+        margin: 0 auto;
     }
 }
